update GU translations
(Old svn revision: 15897)

--- a/po/gu.po
+++ b/po/gu.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: gu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-02 22:27+0200\n"
-"PO-Revision-Date: 2005-03-02 12:05+0530\n"
+"PO-Revision-Date: 2005-05-03 18:14+0530\n"
 "Last-Translator: Ankit Patel <ankit@redhat.com>\n"
 "Language-Team: Gujarati <gu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
-"Plural-Forms: Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
 "\n"
 "\n"
 
@@ -234,7 +234,6 @@ msgstr "ધ્વનિ"
 #. Translation with context.
 #. * Translators only need to translate 'Terminal'
 #: ../panel/icons.c:77
-#, fuzzy
 msgid "icons|Terminal"
 msgstr "ટર્મિનલ"
 
@@ -335,17 +334,16 @@ msgid "None"
 msgstr "કંઈ નહિં"
 
 #: ../settings/xfce_settings_dialog.c:279
-#, fuzzy
 msgid "At both sides"
-msgstr "આપોઆપ સંતાડો"
+msgstr "બંને બાજુઓએ"
 
 #: ../settings/xfce_settings_dialog.c:283
 msgid "At the start"
-msgstr ""
+msgstr "શરૂઆતમાં"
 
 #: ../settings/xfce_settings_dialog.c:287
 msgid "At the end"
-msgstr ""
+msgstr "અંતે"
 
 #: ../settings/xfce_settings_dialog.c:320
 msgid "Panel size:"
@@ -361,7 +359,7 @@ msgstr "પોપઅપ સ્થિતિ:"
 
 #: ../settings/xfce_settings_dialog.c:371
 msgid "Handles:"
-msgstr ""
+msgstr "નિયંત્રકો:"
 
 #: ../settings/xfce_settings_dialog.c:407
 msgid "Autohide:"
@@ -369,7 +367,7 @@ msgstr "આપોઆપ છુપાવો:"
 
 #: ../settings/xfce_settings_dialog.c:453
 msgid "Full width:"
-msgstr ""
+msgstr "સંપૂર્ણ પહોળાઈ:"
 
 #: ../settings/xfce_settings_dialog.c:524
 msgid "Xfce Panel Settings"
@@ -565,120 +563,109 @@ msgstr "Xfce ઘડિયાળ"
 
 #: ../plugins/flexspace/flexspace.c:78
 msgid "Flexible space"
-msgstr ""
+msgstr "રાહતદાયક જગ્યા"
 
 #: ../plugins/launcher/launcher.c:130
-#, fuzzy
 msgid "Launcher Plugin"
-msgstr "લોન્ચર"
+msgstr "લોન્ચર પ્લગઈન"
 
 #: ../plugins/launcher/launcher.c:314
-#, fuzzy
 msgid "Alternative Launcher"
-msgstr "મેનુને લોન્ચરમાં જોડો"
+msgstr "વૈકલ્પિક લોન્ચર"
 
 #: ../plugins/launcher/launcher.c:372
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Could not run \"%s\":\n"
 "%s"
-msgstr "પેનલ વસ્તુ \"%s\" બનાવી શક્યા નથી."
+msgstr ""
+"\"%s\" ચલાવી શક્યા નહિં:\n"
+"%s"
 
 #: ../plugins/launcher/launcher.c:704
 #: ../plugins/launcher/launcher-dialog.c:1185
-#, fuzzy
 msgid "New item"
-msgstr "નવી વસ્તુ ઉમેરો"
+msgstr "નવી વસ્તુ"
 
 #: ../plugins/launcher/launcher.c:706
 #: ../plugins/launcher/launcher-dialog.c:1186
-#, fuzzy
 msgid "This item has not yet been configured"
-msgstr "આ વસ્તુ પાસે કોઈ રુપરેખાંકન વિકલ્પો નથી"
+msgstr "આ વસ્તુ હજુ રૂપરેખાંકિત થઈ નથી"
 
 #: ../plugins/launcher/launcher-dialog.c:95 ../config/contents.xml.in.h:14
 msgid "Terminal"
 msgstr "ટર્મિનલ"
 
 #: ../plugins/launcher/launcher-dialog.c:96
-#, fuzzy
 msgid "Development"
-msgstr "વિકાસકર્તા"
+msgstr "વિકાસ"
 
 #: ../plugins/launcher/launcher-dialog.c:97 ../config/contents.xml.in.h:13
-#, fuzzy
 msgid "Settings"
-msgstr "પેનલ સુયોજનો"
+msgstr "સુયોજનો"
 
 #: ../plugins/launcher/launcher-dialog.c:98
 msgid "System"
-msgstr ""
+msgstr "સિસ્ટમ"
 
 #: ../plugins/launcher/launcher-dialog.c:99
 msgid "Windows programs"
-msgstr ""
+msgstr "Windows કાર્યક્રમો"
 
 #: ../plugins/launcher/launcher-dialog.c:262
-#, fuzzy
 msgid "Name"
-msgstr "રમતો"
+msgstr "નામ"
 
 #: ../plugins/launcher/launcher-dialog.c:282
-#, fuzzy
 msgid "Description"
-msgstr "સ્થિતિ"
+msgstr "વર્ણન"
 
 #: ../plugins/launcher/launcher-dialog.c:397
-#, fuzzy
 msgid "Select image file"
-msgstr "ફાઈલ પસંદ કરો"
+msgstr "ઈમેજ ફાઈલ પસંદ કરો"
 
 #: ../plugins/launcher/launcher-dialog.c:468
 msgid "Other..."
-msgstr ""
+msgstr "અન્ય..."
 
 #: ../plugins/launcher/launcher-dialog.c:567
-#, fuzzy
 msgid "Command"
-msgstr "આદેશ:"
+msgstr "આદેશ"
 
 #: ../plugins/launcher/launcher-dialog.c:622
-#, fuzzy
 msgid "Use _startup notification"
-msgstr "શરુઆતના સૂચનો વાપરો (_n)"
+msgstr "શરુઆત સૂચનો વાપરો (_s)"
 
 #: ../plugins/launcher/launcher-dialog.c:644
 #: ../plugins/launcher/launcher-dialog.c:649
-#, fuzzy
 msgid "Edit launcher"
-msgstr "લોન્ચર ઉમેરો"
+msgstr "લોન્ચરમાં ફેરફાર કરો"
 
 #: ../plugins/launcher/launcher-dialog.c:1242
 msgid "_Up"
-msgstr ""
+msgstr "ઉપર (_U)"
 
 #: ../plugins/launcher/launcher-dialog.c:1248
 msgid "_Down"
-msgstr ""
+msgstr "નીચે (_D)"
 
 #: ../plugins/launcher/launcher-dialog.c:1254
-#, fuzzy
 msgid "_Edit"
-msgstr "સંપાદક"
+msgstr "ફેરફાર કરો (_E)"
 
 #: ../plugins/launcher/launcher-dialog.c:1260
 msgid "_Add"
-msgstr ""
+msgstr "ઉમેરો (_A)"
 
 #: ../plugins/launcher/launcher-dialog.c:1290
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
-msgstr ""
+msgstr "યાદીમાંની પ્રથમ વસ્તુ પેનલ પર બતાવેલી છે. વધારાની વસ્તુઓ મેનુમાં દેખાશે."
 
 #: ../plugins/launcher/launcher-dialog.c:1313
-msgid "Panel Item and Menu"
-msgstr ""
+msgid "Panel Item and Menu Items"
+msgstr "પેનલ વસ્તુ અને મેનુ વસ્તુઓ"
 
 #: ../plugins/mailcheck/mailcheck.c:838
 msgid "Mail box:"
@@ -740,19 +727,16 @@ msgstr "સ્ક્રીનને તાળુ લગાવો"
 
 #. don't translate 'tip|'
 #: ../plugins/systembuttons/systembuttons.c:172
-#, fuzzy
 msgid "tip|Exit"
 msgstr "બહાર નીકળો"
 
 #. don't translate 'tip|'
 #: ../plugins/systembuttons/systembuttons.c:174
-#, fuzzy
 msgid "tip|Setup"
 msgstr "સુયોજન"
 
 #. don't translate 'tip|'
 #: ../plugins/systembuttons/systembuttons.c:176
-#, fuzzy
 msgid "tip|Info"
 msgstr "જાણકારી"
 
@@ -792,7 +776,7 @@ msgstr "સિસ્ટમ બટનો"
 
 #: ../plugins/systray/systray.c:278
 msgid "Notification Area"
-msgstr ""
+msgstr "સૂચન વિસ્તાર"
 
 #: ../settings/xfce-panel-settings.desktop.in.h:1
 msgid "Panel Settings"
@@ -820,56 +804,49 @@ msgstr "Xfce 4 કાર્યપટ્ટી સુયોજનો"
 
 #: ../config/contents.xml.in.h:1
 msgid "Appfinder"
-msgstr ""
+msgstr "કાર્યક્રમશોધક"
 
 #: ../config/contents.xml.in.h:2
 msgid "Drag file to print"
-msgstr ""
+msgstr "ફાઈલને છાપવા માટે ખેંચો"
 
 #: ../config/contents.xml.in.h:3
-#, fuzzy
 msgid "File manager"
-msgstr "ફાઈલ વ્યવસ્થા"
+msgstr "ફાઈલ વ્યવસ્થાપક"
 
 #: ../config/contents.xml.in.h:4
 msgid "Find and run applications"
-msgstr ""
+msgstr "શોધો અને ચલાવો કાર્યક્રમો"
 
 #: ../config/contents.xml.in.h:5
 msgid "Konqueror"
-msgstr ""
+msgstr "કોન્કરર"
 
 #: ../config/contents.xml.in.h:6
 msgid "Konqueror File Manager"
-msgstr ""
+msgstr "કોન્કરર ફાઈલ વ્યવસ્થાપક"
 
 #: ../config/contents.xml.in.h:7
 msgid "Manual"
-msgstr ""
+msgstr "માર્ગદર્શિકા"
 
 #: ../config/contents.xml.in.h:8
 msgid "Mozilla Web Browser"
-msgstr ""
+msgstr "મોઝિલ્લા વેબ બ્રાઉઝર"
 
 #: ../config/contents.xml.in.h:9
 msgid "Music player"
-msgstr ""
+msgstr "મ્યુઝીક પ્લેયર"
 
 #: ../config/contents.xml.in.h:10
 msgid "Nautilus"
-msgstr ""
+msgstr "નોટિલસ"
 
 #: ../config/contents.xml.in.h:11
 msgid "Nautilus File Manager"
-msgstr ""
+msgstr "નોટિલસ ફાઈલ વ્યવસ્થાપક"
 
 #: ../config/contents.xml.in.h:12
-#, fuzzy
 msgid "Printer Management"
-msgstr "ફાઈલ વ્યવસ્થા"
+msgstr "પ્રિન્ટર વ્યવસ્થાપન"
 
-#~ msgid "Menu"
-#~ msgstr "મેનુ"
-
-#~ msgid "Always on top:"
-#~ msgstr "હંમેશા ઉપર:"
