fix DA spelling error (fix #912)
(Old svn revision: 15905)

--- a/po/da.po
+++ b/po/da.po
@@ -165,7 +165,7 @@ msgstr "Hjælp"
 
 #: panel/panel.c:666
 msgid "_Lock screen"
-msgstr "Læs skærm"
+msgstr "Lås skærm"
 
 #: panel/panel.c:671
 msgid "_Restart"
