--- a/po/ko.po
+++ b/po/ko.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2005-03-17 22:48+0900\n"
-"Last-Translator: ByungHyun Choi<byunghyunchoi@rtlinux.or.kr>\n"
+"PO-Revision-Date: 2005-06-25 23:04+0900\n"
+"Last-Translator: ByungHyun Choi<byunghyun.choi@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -232,9 +232,8 @@ msgid "Settings manager not available"
 msgstr "설정 도구 모음을 실행시킬 수 없군요."
 
 #: panel/popup.c:267
-#, fuzzy
 msgid "Menu"
-msgstr "설명서"
+msgstr "메뉴"
 
 #: settings/xfce_settings_dialog.c:87
 msgid "Small"
@@ -289,9 +288,8 @@ msgid "Popup position:"
 msgstr "패널 위치:"
 
 #: settings/xfce_settings_dialog.c:343
-#, fuzzy
 msgid "Always on top:"
-msgstr "같은 태스크는 한 군데로 모으기(_g) "
+msgstr "항상 위로: "
 
 #: settings/xfce_settings_dialog.c:397
 msgid "Autohide:"
