--- a/po/ko.po
+++ b/po/ko.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-19 15:55+0200\n"
-"PO-Revision-Date: 2005-03-22 22:27+0900\n"
-"Last-Translator: ByungHyun Choi<byunghyunchoi@rtlinux.or.kr>\n"
+"PO-Revision-Date: 2005-05-23 00:37+0900\n"
+"Last-Translator: ByungHyun Choi<byunghyun.choi@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -100,7 +100,7 @@ msgstr "패널 항목 \"%s\"를(을) 생성하지 못 했습니다."
 #: ../panel/controls.c:709
 #, c-format
 msgid "Remove %s item?"
-msgstr ""
+msgstr "%s를 삭제할까요?"
 
 #: ../panel/controls.c:743 ../panel/panel.c:719 ../iconbox/iconbox.c:618
 msgid "_Properties..."
@@ -279,17 +279,16 @@ msgid "None"
 msgstr "사용안함"
 
 #: ../settings/xfce_settings_dialog.c:199
-#, fuzzy
 msgid "At both sides"
-msgstr "자동 숨기기"
+msgstr "양쪽 모두"
 
 #: ../settings/xfce_settings_dialog.c:203
 msgid "At the start"
-msgstr ""
+msgstr "처음에"
 
 #: ../settings/xfce_settings_dialog.c:207
 msgid "At the end"
-msgstr ""
+msgstr "마지막에"
 
 #: ../settings/xfce_settings_dialog.c:240
 msgid "Panel size:"
@@ -309,7 +308,7 @@ msgstr "자동 숨김:"
 
 #: ../settings/xfce_settings_dialog.c:355
 msgid "Full width:"
-msgstr ""
+msgstr "최대크기:"
 
 #: ../settings/xfce_settings_dialog.c:426
 msgid "Xfce Panel Settings"
@@ -512,35 +511,31 @@ msgid "Launcher"
 msgstr "실행기"
 
 #: ../plugins/launcher/launcher.c:113
-#, fuzzy
 msgid "Launcher Plugin"
 msgstr "실행기"
 
 #: ../plugins/launcher/launcher.c:381
-#, fuzzy, c-format
 msgid ""
 "Could not run \"%s\":\n"
 "%s"
-msgstr "패널 항목 \"%s\"를(을) 생성하지 못 했습니다."
+msgstr "\"%s\"를(을) 실행하지 못 했습니다:\n"
+"%s"
 
 #: ../plugins/launcher/launcher.c:825
 #: ../plugins/launcher/launcher-dialog.c:1185
-#, fuzzy
 msgid "New item"
-msgstr "새 항목 추가"
+msgstr "새로운 항목"
 
 #: ../plugins/launcher/launcher.c:827
 #: ../plugins/launcher/launcher-dialog.c:1186
-#, fuzzy
 msgid "This item has not yet been configured"
-msgstr "이 아이템은 속성을 정의할 수 없습니다."
+msgstr "아직 구성되지 않았습니다."
 
 #: ../plugins/launcher/launcher-dialog.c:95 ../config/contents.xml.in.h:14
 msgid "Terminal"
 msgstr "터미널"
 
 #: ../plugins/launcher/launcher-dialog.c:96
-#, fuzzy
 msgid "Development"
 msgstr "만든이"
 
@@ -557,62 +552,56 @@ msgid "Windows programs"
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:262
-#, fuzzy
 msgid "Name"
-msgstr "게임"
+msgstr "이름"
 
 #: ../plugins/launcher/launcher-dialog.c:282
-#, fuzzy
 msgid "Description"
-msgstr "위치"
+msgstr "설명"
 
 #: ../plugins/launcher/launcher-dialog.c:397
-#, fuzzy
 msgid "Select image file"
-msgstr "화일선택"
+msgstr "그림화일선택"
 
 #: ../plugins/launcher/launcher-dialog.c:468
 msgid "Other..."
-msgstr ""
+msgstr "기타..."
 
 #: ../plugins/launcher/launcher-dialog.c:567
-#, fuzzy
 msgid "Command"
 msgstr "명령:"
 
 #: ../plugins/launcher/launcher-dialog.c:622
-#, fuzzy
 msgid "Use _startup notification"
-msgstr "시작과 동시에 알림(_n)"
+msgstr "시작과 동시에 알림(_s)"
 
 #: ../plugins/launcher/launcher-dialog.c:644
 #: ../plugins/launcher/launcher-dialog.c:649
-#, fuzzy
 msgid "Edit launcher"
-msgstr "실행기 추가"
+msgstr "실행기 편집"
 
 #: ../plugins/launcher/launcher-dialog.c:1242
-#, fuzzy
 msgid "_Edit"
-msgstr "편집기"
+msgstr "수정(_E)"
 
 #: ../plugins/launcher/launcher-dialog.c:1253
 msgid "_Up"
-msgstr ""
+msgstr "위로(_U)"
 
 #: ../plugins/launcher/launcher-dialog.c:1259
 msgid "_Down"
-msgstr ""
+msgstr "아래오(_D)"
 
 #: ../plugins/launcher/launcher-dialog.c:1270
 msgid "_Add"
-msgstr ""
+msgstr "추가(_A)"
 
 #: ../plugins/launcher/launcher-dialog.c:1300
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
-msgstr ""
+msgstr "리스트의 첫번째 항목은 패널에 보이고, 추가 항목은 메뉴에 "
+"나타납니다."
 
 #: ../plugins/mailcheck/mailcheck.c:838
 msgid "Mail box:"
@@ -674,17 +663,17 @@ msgstr "화면 잠금"
 #. don't translate 'tip|'
 #: ../plugins/systembuttons/systembuttons.c:172
 msgid "tip|Exit"
-msgstr "종료"
+msgstr "tip|종료"
 
 #. don't translate 'tip|'
 #: ../plugins/systembuttons/systembuttons.c:174
 msgid "tip|Setup"
-msgstr "설정"
+msgstr "tip|설정"
 
 #. don't translate 'tip|'
 #: ../plugins/systembuttons/systembuttons.c:176
 msgid "tip|Info"
-msgstr "정보"
+msgstr "tip|정보"
 
 #. set names to use in option menus
 #: ../plugins/systembuttons/systembuttons.c:521
@@ -721,13 +710,12 @@ msgid "System buttons"
 msgstr "시스템 버튼"
 
 #: ../plugins/systray/systray.c:492
-#, fuzzy
 msgid "Status Area"
 msgstr "상태 영역"
 
 #: ../plugins/systray/systray.c:555
 msgid "Display time before icons"
-msgstr ""
+msgstr "알림 영역"
 
 #: ../settings/xfce-panel-settings.desktop.in.h:1
 msgid "Panel Settings"
@@ -800,46 +788,3 @@ msgstr "노틸러스 화일 관리자"
 #: ../config/contents.xml.in.h:12
 msgid "Printer Management"
 msgstr "프린터 관리"
-
-#~ msgid "Removing the item will also remove its popup menu."
-#~ msgstr "이 항목을 삭제하면 팝업 메뉴도 같이 사라집니다."
-
-#~ msgid "Caption:"
-#~ msgstr "캡션:"
-
-#~ msgid "Tooltip:"
-#~ msgstr "도구도움말:"
-
-#~ msgid "Attach menu to launcher"
-#~ msgstr "실행기에 메뉴 추가"
-
-#~ msgid "Change menu item"
-#~ msgstr "메뉴 항목 변경"
-
-#~ msgid "Click mouse button 3 to change item"
-#~ msgstr "항목을 변경하려면 마우스 버튼 3을 클릭하세요."
-
-#~ msgid "Add launcher"
-#~ msgstr "실행기 추가"
-
-#~ msgid "Add new item"
-#~ msgstr "새 항목 추가"
-
-#~ msgid "Left"
-#~ msgstr "좌측"
-
-#~ msgid "Right"
-#~ msgstr "우측"
-
-#~ msgid "Top"
-#~ msgstr "위"
-
-#~ msgid "Bottom"
-#~ msgstr "아래"
-
-#~ msgid "Popup position:"
-#~ msgstr "패널 위치:"
-
-#, fuzzy
-#~ msgid "Alternative Launcher"
-#~ msgstr "실행기에 메뉴 추가"
