--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1,15 +1,16 @@
 # Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the xfce4-panel package.
 # umm <umm@pchome.com.tw>, 2003.
-# Minor updates by Ambrose Li <acli@ada.dhs.org>, 2004.
+# Ambrose Li <acli@ada.dhs.org>, 2004.
+# Hydonsingore Sie <hydonsingore@mail.educities.edu.tw>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-19 15:55+0200\n"
-"PO-Revision-Date: 2004-04-20 16:21+0800\n"
-"Last-Translator: Ambrose Li <acli@ada.dhs.org>\n"
+"PO-Revision-Date: 2005-06-27 22:40+0800\n"
+"Last-Translator: Hydonsingore Sie <hydonsingore@mail.educities.edu.tw>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -102,7 +103,7 @@ msgstr "無法建立面板項目「%s」。"
 #: ../panel/controls.c:709
 #, c-format
 msgid "Remove %s item?"
-msgstr ""
+msgstr "移除 %s 項目"
 
 #: ../panel/controls.c:743 ../panel/panel.c:719 ../iconbox/iconbox.c:618
 msgid "_Properties..."
@@ -198,9 +199,8 @@ msgstr "聲音"
 #. Translation with context.
 #. * Translators only need to translate 'Terminal'
 #: ../panel/icons.c:77
-#, fuzzy
 msgid "icons|Terminal"
-msgstr "終端機"
+msgstr "圖示|終端機"
 
 #: ../panel/mcs_client.c:169
 msgid "Settings manager not available"
@@ -227,13 +227,12 @@ msgstr "無法註冊系統匣： %s"
 #. * %Y  : four digit year
 #.
 #: ../taskbar/xftaskbar.c:616 ../plugins/systray/systray.c:175
-#, fuzzy
 msgid "%A %d %B %Y"
-msgstr "%Y年%m月%d日　%A"
+msgstr "%Y年%B月%d日　%A"
 
 #: ../taskbar/xftaskbar.c:637 ../plugins/systray/systray.c:200
 msgid "%H:%M"
-msgstr ""
+msgstr "%H:%M"
 
 #: ../taskbar/xftaskbar.c:910 ../settings/xftaskbar_plugin.c:696
 #: ../settings/xftaskbar_plugin.c:706 ../settings/xftaskbar_plugin.c:987
@@ -245,18 +244,16 @@ msgid "Cannot create MCS client channel"
 msgstr "無法建立 MCS 用戶通道"
 
 #: ../iconbox/iconbox.c:568
-#, fuzzy
 msgid "Xfce Iconbox"
-msgstr "Xfce 4 圖示盒設定"
+msgstr "Xfce 圖示盒"
 
 #: ../iconbox/iconbox.c:576 ../plugins/launcher/launcher.c:121
 msgid "Developer"
-msgstr ""
+msgstr "開發者"
 
 #: ../iconbox/iconbox.c:612
-#, fuzzy
 msgid "_About"
-msgstr "關於 Xfce(_A)"
+msgstr "關於(_A)"
 
 #: ../settings/xfce_settings_dialog.c:87 ../settings/xftaskbar_plugin.c:480
 #: ../settings/xftaskbar_plugin.c:511
@@ -286,20 +283,19 @@ msgstr "垂直"
 
 #: ../settings/xfce_settings_dialog.c:195 ../settings/iconbox_plugin.c:762
 msgid "None"
-msgstr ""
+msgstr "無"
 
 #: ../settings/xfce_settings_dialog.c:199
-#, fuzzy
 msgid "At both sides"
-msgstr "自動隱藏"
+msgstr "在兩邊"
 
 #: ../settings/xfce_settings_dialog.c:203
 msgid "At the start"
-msgstr ""
+msgstr "在開始"
 
 #: ../settings/xfce_settings_dialog.c:207
 msgid "At the end"
-msgstr ""
+msgstr "在結尾"
 
 #: ../settings/xfce_settings_dialog.c:240
 msgid "Panel size:"
@@ -311,7 +307,7 @@ msgstr "面板方向："
 
 #: ../settings/xfce_settings_dialog.c:273
 msgid "Handles:"
-msgstr ""
+msgstr "把手"
 
 #: ../settings/xfce_settings_dialog.c:309
 msgid "Autohide:"
@@ -319,7 +315,7 @@ msgstr "自動隱藏："
 
 #: ../settings/xfce_settings_dialog.c:355
 msgid "Full width:"
-msgstr ""
+msgstr "全寬度"
 
 #: ../settings/xfce_settings_dialog.c:426
 msgid "Xfce Panel Settings"
@@ -348,7 +344,6 @@ msgid "_Bottom"
 msgstr "底部(_B)"
 
 #: ../settings/xftaskbar_plugin.c:422
-#, fuzzy
 msgid "Alignment:"
 msgstr "對齊"
 
@@ -370,7 +365,6 @@ msgid "Size"
 msgstr "大小"
 
 #: ../settings/xftaskbar_plugin.c:474
-#, fuzzy
 msgid "Height:"
 msgstr "高度："
 
@@ -380,7 +374,7 @@ msgstr "闊度："
 
 #: ../settings/xftaskbar_plugin.c:541
 msgid "_Shrink to fit"
-msgstr ""
+msgstr "適度縮小(_S)"
 
 #. Autohide
 #: ../settings/xftaskbar_plugin.c:561
@@ -393,13 +387,12 @@ msgstr "自動隱藏工作列(_H)"
 
 #. tasklist
 #: ../settings/xftaskbar_plugin.c:583 ../plugins/tasklist/tasklist.c:92
-#, fuzzy
 msgid "Tasklist"
-msgstr "工作"
+msgstr "工作列表"
 
 #: ../settings/xftaskbar_plugin.c:592
 msgid "Show tasklist"
-msgstr ""
+msgstr "顯示工作列表"
 
 #: ../settings/xftaskbar_plugin.c:604
 msgid "Show tasks from _all workspaces"
@@ -426,38 +419,35 @@ msgstr "在工作列中顯示頁面切換器(_P)"
 #. status area
 #: ../settings/xftaskbar_plugin.c:641
 msgid "Status area"
-msgstr ""
+msgstr "狀態區"
 
 #: ../settings/xftaskbar_plugin.c:650
-#, fuzzy
 msgid "Show _notification icons"
-msgstr "顯示應用程式的名稱(_N)"
+msgstr "顯示通知圖示(_N)"
 
 #: ../settings/xftaskbar_plugin.c:657 ../plugins/systray/systray.c:535
 msgid "Show _time"
-msgstr ""
+msgstr "顯示時間(_T)"
 
 #: ../settings/xftaskbar_plugin.c:718
 msgid "General"
-msgstr ""
+msgstr "一般"
 
 #: ../settings/xftaskbar_plugin.c:729
 msgid "Components"
-msgstr ""
+msgstr "元件"
 
 #: ../settings/iconbox_plugin.c:629
-#, fuzzy
 msgid "Icon size"
-msgstr "圖示預覽"
+msgstr "圖示大小"
 
 #: ../settings/iconbox_plugin.c:691
-#, fuzzy
 msgid "_Show only minimized applications"
-msgstr "顯示應用程式的名稱(_N)"
+msgstr "只顯示最小化的應用程式(_S)"
 
 #: ../settings/iconbox_plugin.c:754
 msgid "Transparency"
-msgstr ""
+msgstr "透明度"
 
 #: ../settings/iconbox_plugin.c:777
 msgid "Full"
@@ -465,9 +455,8 @@ msgstr ""
 
 #: ../settings/iconbox_plugin.c:831 ../settings/iconbox_plugin.c:841
 #: ../settings/iconbox_plugin.c:992
-#, fuzzy
 msgid "Iconbox"
-msgstr "圖示："
+msgstr "圖示盒"
 
 # NOTE 假如中文內碼為UTF8, 日期格式是「xxxx年xx月xx日　星期ｘ」
 # NOTE 但如果中文內碼為五大碼，GTK會無法顯示星期，變成只有「xxxx年xx月xx日」
@@ -482,7 +471,7 @@ msgstr "圖示："
 #.
 #: ../plugins/clock/clock.c:191
 msgid "%A, %d %B %Y"
-msgstr "%Y年%m月%d日　%A"
+msgstr "%Y年%B月%d日　%A"
 
 #: ../plugins/clock/clock.c:421
 msgid "Clock type:"
@@ -526,35 +515,35 @@ msgstr "Xfce 時鐘"
 
 #: ../plugins/flexspace/flexspace.c:78
 msgid "Flexible space"
-msgstr ""
+msgstr "彈性空間"
 
 #: ../plugins/launcher/launcher.c:113 ../plugins/launcher/launcher.c:306
 msgid "Launcher"
 msgstr "啟動器"
 
 #: ../plugins/launcher/launcher.c:113
-#, fuzzy
 msgid "Launcher Plugin"
-msgstr "啟動器"
+msgstr "啟動器外掛"
 
 #: ../plugins/launcher/launcher.c:381
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Could not run \"%s\":\n"
 "%s"
-msgstr "無法建立面板項目「%s」。"
+msgstr ""
+"無法執行\"%s\":\n"
+"%s"
+
 
 #: ../plugins/launcher/launcher.c:825
 #: ../plugins/launcher/launcher-dialog.c:1185
-#, fuzzy
 msgid "New item"
 msgstr "增加新項目"
 
 #: ../plugins/launcher/launcher.c:827
 #: ../plugins/launcher/launcher-dialog.c:1186
-#, fuzzy
 msgid "This item has not yet been configured"
-msgstr "該項目沒有設定選項"
+msgstr "該項目尚未設定"
 
 #: ../plugins/launcher/launcher-dialog.c:95 ../config/contents.xml.in.h:14
 msgid "Terminal"
@@ -562,78 +551,71 @@ msgstr "終端機"
 
 #: ../plugins/launcher/launcher-dialog.c:96
 msgid "Development"
-msgstr ""
+msgstr "開發"
 
 #: ../plugins/launcher/launcher-dialog.c:97 ../config/contents.xml.in.h:13
-#, fuzzy
 msgid "Settings"
-msgstr "設定面板"
+msgstr "設定"
 
 #: ../plugins/launcher/launcher-dialog.c:98
 msgid "System"
-msgstr ""
+msgstr "系統"
 
 #: ../plugins/launcher/launcher-dialog.c:99
 msgid "Windows programs"
-msgstr ""
+msgstr "Windows程式"
 
 #: ../plugins/launcher/launcher-dialog.c:262
-#, fuzzy
 msgid "Name"
-msgstr "遊戲"
+msgstr "名稱"
 
 #: ../plugins/launcher/launcher-dialog.c:282
-#, fuzzy
 msgid "Description"
-msgstr "位置"
+msgstr "描述"
 
 #: ../plugins/launcher/launcher-dialog.c:397
-#, fuzzy
 msgid "Select image file"
-msgstr "選擇檔案"
+msgstr "選擇影像檔案"
 
 #: ../plugins/launcher/launcher-dialog.c:468
 msgid "Other..."
-msgstr ""
+msgstr "其他..."
 
 #: ../plugins/launcher/launcher-dialog.c:567
-#, fuzzy
 msgid "Command"
-msgstr "指令："
+msgstr "指令"
 
 #: ../plugins/launcher/launcher-dialog.c:622
-#, fuzzy
 msgid "Use _startup notification"
-msgstr "使用啟動提示(_N)"
+msgstr "使用啟動提示(_S)"
 
 #: ../plugins/launcher/launcher-dialog.c:644
 #: ../plugins/launcher/launcher-dialog.c:649
-#, fuzzy
 msgid "Edit launcher"
-msgstr "增加啟動器"
+msgstr "編輯啟動器"
 
 #: ../plugins/launcher/launcher-dialog.c:1242
-#, fuzzy
 msgid "_Edit"
-msgstr "編輯器"
+msgstr "編輯(_E)"
 
 #: ../plugins/launcher/launcher-dialog.c:1253
 msgid "_Up"
-msgstr ""
+msgstr "上(_U)"
 
 #: ../plugins/launcher/launcher-dialog.c:1259
 msgid "_Down"
-msgstr ""
+msgstr "下(_D)"
 
 #: ../plugins/launcher/launcher-dialog.c:1270
 msgid "_Add"
-msgstr ""
+msgstr "新增(_A)"
 
 #: ../plugins/launcher/launcher-dialog.c:1300
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
 msgstr ""
+"清單中的第一個項目會出現在面板上，其餘的項目會顯現在選單中。"
 
 #: ../plugins/mailcheck/mailcheck.c:838
 msgid "Mail box:"
@@ -748,11 +730,11 @@ msgstr "系統按鈕"
 
 #: ../plugins/systray/systray.c:492
 msgid "Status Area"
-msgstr ""
+msgstr "狀態區"
 
 #: ../plugins/systray/systray.c:555
 msgid "Display time before icons"
-msgstr ""
+msgstr "讓時間顯示在圖示之前"
 
 #: ../settings/xfce-panel-settings.desktop.in.h:1
 msgid "Panel Settings"
@@ -780,53 +762,51 @@ msgstr "Xfce 4 工作列設定"
 
 #: ../config/contents.xml.in.h:1
 msgid "Appfinder"
-msgstr ""
+msgstr "程式搜尋器"
 
 #: ../config/contents.xml.in.h:2
 msgid "Drag file to print"
-msgstr ""
+msgstr "拖弋檔案去列印"
 
 #: ../config/contents.xml.in.h:3
-#, fuzzy
 msgid "File manager"
-msgstr "檔案管理"
+msgstr "檔案管理器"
 
 #: ../config/contents.xml.in.h:4
 msgid "Find and run applications"
-msgstr ""
+msgstr "尋找並執行應用程式"
 
 #: ../config/contents.xml.in.h:5
 msgid "Konqueror"
-msgstr ""
+msgstr "Konqueror"
 
 #: ../config/contents.xml.in.h:6
 msgid "Konqueror File Manager"
-msgstr ""
+msgstr "Konqueror檔案管理器"
 
 #: ../config/contents.xml.in.h:7
 msgid "Manual"
-msgstr ""
+msgstr "手冊"
 
 #: ../config/contents.xml.in.h:8
 msgid "Mozilla Web Browser"
-msgstr ""
+msgstr "Mozilla網頁瀏覽器"
 
 #: ../config/contents.xml.in.h:9
 msgid "Music player"
-msgstr ""
+msgstr "音樂播放程式"
 
 #: ../config/contents.xml.in.h:10
 msgid "Nautilus"
-msgstr ""
+msgstr "Nautilus"
 
 #: ../config/contents.xml.in.h:11
 msgid "Nautilus File Manager"
-msgstr ""
+msgstr "Nautilus檔案管理器"
 
 #: ../config/contents.xml.in.h:12
-#, fuzzy
 msgid "Printer Management"
-msgstr "檔案管理"
+msgstr "列印管理"
 
 #~ msgid "Removing the item will also remove its popup menu."
 #~ msgstr "移除一個項目將同時移除其附屬的彈出選單。"
