--- a/po/ca.po
+++ b/po/ca.po
@@ -1,19 +1,22 @@
+# translation of ca.po to català
 # xfce4-panel for XFce desktop environment.
 # Copyright (C) 2003, 2004 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the xfce4 package.
 # Carles Muñoz Gorriz <carlesmu@internuatas.org>, 2003, 2004.
+# Pau Rul·lan Ferragut <paurullan@bulma.net>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: XFce 4\n"
+"Project-Id-Version: ca\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2004-03-29 21:17+0100\n"
-"Last-Translator: Carles Munoz Gorriz <carlesmu@internautas.org>\n"
-"Language-Team: ca <ca@li.org>\n"
+"PO-Revision-Date: 2005-06-28 11:27+0200\n"
+"Last-Translator: Pau Rul·lan Ferragut <paurullan@bulma.net>\n"
+"Language-Team: català <ca@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.10\n"
 
 #: panel/xfce_support.c:557
 msgid "Select file"
@@ -21,24 +24,19 @@ msgstr "Seleccioneu el fitxer"
 
 #: panel/settings.c:181
 msgid "No data was found. The panel will be empty."
-msgstr ""
+msgstr "No s'han trobat dades. El plafó es mostrarà buit."
 
 #: panel/controls_dialog.c:89 panel/item_dialog.c:1178
 msgid "Position:"
 msgstr "Posició:"
 
 #: panel/controls_dialog.c:155
-#, fuzzy
 msgid "Item properties"
-msgstr "/_Propietats..."
+msgstr "Propietats de l'ítem"
 
 #: panel/controls_dialog.c:209 panel/controls.c:711
-#, fuzzy
 msgid "Removing the item will also remove its popup menu."
-msgstr ""
-"Suprimir un element també suprimeix el seu menú emergent.\n"
-"\n"
-"Vols suprimir l'element?"
+msgstr "Suprimir un element també suprimeix el seu menú emergent."
 
 #: panel/item_dialog.c:124
 msgid "Select command"
@@ -82,9 +80,8 @@ msgstr "Canvia l'element del menú"
 
 #. add buttons
 #: panel/item_dialog.c:1221 panel/controls.c:748
-#, fuzzy
 msgid "_Remove"
-msgstr "/_Elimina"
+msgstr "_Elimina"
 
 #: panel/item_dialog.c:1233 panel/item.c:738
 msgid "Launcher"
@@ -107,7 +104,7 @@ msgid "Are you sure you want to exit?"
 msgstr "Esteu segur que voleu sortir?"
 
 #: panel/main.c:401
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " The Xfce Panel\n"
@@ -119,34 +116,38 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, versió %s\n"
-"Part del Entorn d'Escriptori XFce\n"
+"\n"
+"El plafó Xfce\n"
+"Versió %s\n"
+"\n"
+"Part del Entorn d'Escriptori Xfce\n"
 "http://www.xfce.org\n"
+"\n"
+"Llicenciat baix la GNU GPL.\n"
+"\n"
 
 #: panel/main.c:488
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr ""
+msgstr "%s: s'ha engegat correctament sense el gestor de sessió"
 
 #: panel/main.c:493
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr ""
+msgstr "%s: s'ha engegat correctament amb el gestor de sessió"
 
 #: panel/controls.c:666
 #, c-format
 msgid "Could not create panel item \"%s\"."
-msgstr ""
+msgstr "No s'ha pogut creat l'ítem \"%s\" del plafó."
 
 #: panel/controls.c:743 panel/panel.c:647
-#, fuzzy
 msgid "_Properties..."
-msgstr "/_Propietats..."
+msgstr "_Propietats..."
 
 #: panel/controls.c:757 panel/panel.c:637
-#, fuzzy
 msgid "Add _new item"
-msgstr "/Afegir _nou element"
+msgstr "Afegir _nou element"
 
 #: panel/controls.c:1040
 msgid "This item has no configuration options"
@@ -154,34 +155,28 @@ msgstr "Aquest element no té opcions de configuració"
 
 #: panel/panel.c:628 panel/panel.c:1055 settings/xfce_settings_plugin.c:86
 #: settings/xfce_settings_dialog.c:450
-#, fuzzy
 msgid "Xfce Panel"
-msgstr "Plafó XFce"
+msgstr "Plafó Xfce"
 
 #: panel/panel.c:652
-#, fuzzy
 msgid "_About Xfce"
-msgstr "/_Quant a XFce"
+msgstr "_Quant a Xfce"
 
 #: panel/panel.c:657
-#, fuzzy
 msgid "_Help"
-msgstr "/_Ajuda"
+msgstr "_Ajuda"
 
 #: panel/panel.c:666
-#, fuzzy
 msgid "_Lock screen"
-msgstr "/_Bloqueja la pantalla"
+msgstr "_Bloqueja la pantalla"
 
 #: panel/panel.c:671
-#, fuzzy
 msgid "_Restart"
-msgstr "/_Reinicia"
+msgstr "_Reinicia"
 
 #: panel/panel.c:680
-#, fuzzy
 msgid "E_xit"
-msgstr "/S_urt"
+msgstr "S_urt"
 
 #: panel/icons.c:63
 msgid "Default"
@@ -189,7 +184,7 @@ msgstr "Per defecte"
 
 #: panel/icons.c:64
 msgid "Editor"
-msgstr "Editor"
+msgstr "Editor "
 
 #: panel/icons.c:65
 msgid "File management"
@@ -209,7 +204,7 @@ msgstr "Navegador d'ajuda"
 
 #: panel/icons.c:69
 msgid "Multimedia"
-msgstr "Multimedia"
+msgstr "Multimèdia"
 
 #: panel/icons.c:70
 msgid "Network"
@@ -233,7 +228,7 @@ msgstr "Só"
 
 #: panel/icons.c:75
 msgid "Terminal"
-msgstr "Terminal"
+msgstr "Terminal s"
 
 #: panel/mcs_client.c:170
 msgid "Settings manager not available"
@@ -257,7 +252,7 @@ msgstr "Gran"
 
 #: settings/xfce_settings_dialog.c:99
 msgid "Huge"
-msgstr ""
+msgstr "Enorme"
 
 #: settings/xfce_settings_dialog.c:175
 msgid "Horizontal"
@@ -265,7 +260,7 @@ msgstr "Horitzontal"
 
 #: settings/xfce_settings_dialog.c:179
 msgid "Vertical"
-msgstr "Vertical"
+msgstr "Vertical "
 
 #: settings/xfce_settings_dialog.c:221
 msgid "Left"
@@ -297,16 +292,16 @@ msgstr "Posició emergent:"
 
 #: settings/xfce_settings_dialog.c:343
 msgid "Always on top:"
-msgstr ""
+msgstr "Sempre visible:"
 
 #: settings/xfce_settings_dialog.c:397
 msgid "Autohide:"
 msgstr "Ocultació automàtica:"
 
 #: settings/xfce_settings_dialog.c:467
-#, fuzzy
+ # 
 msgid "Xfce Panel Settings"
-msgstr "Ajustaments del Plafó XFce"
+msgstr "Paràmetres del Plafó Xfce"
 
 #: settings/xfce_settings_dialog.c:477
 msgid "Appearance"
@@ -325,9 +320,8 @@ msgstr "Comportament"
 #. * %Y  : four digit year
 #.
 #: plugins/clock/clock.c:192
-#, fuzzy
 msgid "%A, %d %B %Y"
-msgstr "%A, %-d %B %Y"
+msgstr "%A, %d %B %Y "
 
 #: plugins/clock/clock.c:422
 msgid "Clock type:"
@@ -339,11 +333,11 @@ msgstr "Analògic"
 
 #: plugins/clock/clock.c:439
 msgid "Digital"
-msgstr "Digital"
+msgstr "Digital "
 
 #: plugins/clock/clock.c:443
 msgid "LED"
-msgstr "LED"
+msgstr "LED "
 
 #: plugins/clock/clock.c:505
 msgid "Hour mode:"
@@ -359,7 +353,7 @@ msgstr "12 hores"
 
 #: plugins/clock/clock.c:524
 msgid "AM/PM"
-msgstr "AM/PM"
+msgstr "AM/PM s"
 
 #: plugins/clock/clock.c:562
 msgid "Show seconds:"
@@ -371,11 +365,11 @@ msgstr "Rellotge XFce"
 
 #: plugins/pager/pager.c:314
 msgid "Number of rows:"
-msgstr ""
+msgstr "Nombre de files:"
 
 #: plugins/pager/pager.c:316
 msgid "Number of columns:"
-msgstr ""
+msgstr "Nombre de columnes:"
 
 #: plugins/pager/pager.c:373
 msgid "Graphical pager"
@@ -429,9 +423,8 @@ msgstr "Butó 2:"
 
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
-#, fuzzy
 msgid "_Hide"
-msgstr "/_Ajuda"
+msgstr "_Amaga"
 
 #: plugins/systembuttons/systembuttons.c:616
 msgid "System buttons"
@@ -446,14 +439,12 @@ msgid "Mail box:"
 msgstr "Bústia del correu:"
 
 #: plugins/mailcheck/mailcheck.c:875
-#, fuzzy
 msgid "New mail command:"
-msgstr "Programa de correu:"
+msgstr "Ordre de correu:"
 
 #: plugins/mailcheck/mailcheck.c:889
-#, fuzzy
 msgid "Command to run when new mail arrives"
-msgstr "Programa a executar quan cliqueu el butó del plafó"
+msgstr "Programa a executar quan rebeu un correu nou"
 
 #: plugins/mailcheck/mailcheck.c:919
 msgid "Command to run when the button on the panel is clicked"
@@ -464,70 +455,6 @@ msgid "Interval (sec):"
 msgstr "Interval (seg):"
 
 #: plugins/mailcheck/mailcheck.c:1016
-#, fuzzy
 msgid "Mail checker"
-msgstr "Comprovació de correu"
+msgstr "Comprovador de correu"
 
-#~ msgid "Remove"
-#~ msgstr "Elimina"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Mostra dos butons:"
-
-#~ msgid "Change item"
-#~ msgstr "Canviar element"
-
-#~ msgid "Menu:"
-#~ msgstr "Menú:"
-
-#, fuzzy
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Plafó XFce"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Afegir _nou element"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Propietats..."
-
-#~ msgid "Select icon"
-#~ msgstr "Seleccioneu una icona"
-
-#~ msgid "Icon:"
-#~ msgstr "Icona:"
-
-#~ msgid "Icon Preview"
-#~ msgstr "Previsualització d'icona"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some XFce features may not work as intended."
-#~ msgstr ""
-#~ "El teu gestor de finestres sembla no suportar els consells del nou gestor "
-#~ "de finestras tal com estan definits a http://www..freedesktop.org. \n"
-#~ "Algunes funcionalitats poden no funcionar tal com es van preveure."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_Gestor d'ajustaments"
-
-#~ msgid "Tiny"
-#~ msgstr "Diminut"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Tema d'icones:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "Capa del plafó:"
-
-#~ msgid "Normal"
-#~ msgstr "Normal"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Centra el plafó:"
-
-#~ msgid "Set"
-#~ msgstr "Estableix"
-
-#~ msgid "Position"
-#~ msgstr "Posició"
