update JA translations
(Old svn revision: 16255)

--- a/po/ja.po
+++ b/po/ja.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2005-05-13 07:27+0900\n"
+"PO-Revision-Date: 2005-07-18 16:28+0900\n"
 "Last-Translator: Daichi Kawahata <daichik@users.sourceforge.net>\n"
 "Language-Team: xfce-users-jp <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -95,7 +95,7 @@ msgstr "ランチャーを追加する"
 
 #: panel/item.c:596
 msgid "Add new item"
-msgstr "新規アイテムを追加する"
+msgstr "新しいアイテムを追加して下さい"
 
 #: panel/main.c:120
 msgid "Are you sure you want to exit?"
@@ -145,7 +145,7 @@ msgstr "プロパティ(_P)..."
 
 #: panel/controls.c:757 panel/panel.c:637
 msgid "Add _new item"
-msgstr "新規アイテムを追加する(_N)"
+msgstr "アイテムを追加(_N)"
 
 #: panel/controls.c:1040
 msgid "This item has no configuration options"
@@ -214,7 +214,7 @@ msgstr "グラフィック"
 
 #: panel/icons.c:72
 msgid "Printer"
-msgstr "印刷機"
+msgstr "プリンタ"
 
 #: panel/icons.c:73
 msgid "Productivity"
@@ -226,7 +226,7 @@ msgstr "サウンド"
 
 #: panel/icons.c:75
 msgid "Terminal"
-msgstr "ターミナルを実行します"
+msgstr "ターミナル"
 
 #: panel/mcs_client.c:170
 msgid "Settings manager not available"
