Fixed errors emitted by 'msgfmt -c'.
Added fall back address at the 'Language-Team: ', according to the
    http://www.iro.umontreal.ca/translation/registry.cgi?team=index

Modified initial comment strings with template by 'msginit'.

Discarded obsolete translations.


(Old svn revision: 17029)

--- a/po/bg.po
+++ b/po/bg.po
@@ -1,16 +1,14 @@
-# Bulgarian translation of PACKAGE.
-# Copyright (C) 2004 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Bulgarian translation of xfce4-panel.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
 # Miroslav Yordanov <miordanov@i-space.org>, 2004.
-# , fuzzy
-# 
-# 
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2004-03-09 18:48+0200\n"
+"PO-Revision-Date: 2005-08-20 01:23+0900\n"
 "Last-Translator: Miroslav Yordanov <miordanov@i-space.org>\n"
 "Language-Team: Bulgarian <bg@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -465,123 +463,3 @@ msgstr "Интервал (сек):"
 #, fuzzy
 msgid "Mail checker"
 msgstr "Проверка на пощата"
-
-#~ msgid "Remove"
-#~ msgstr "Премахване"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Показва два бутона:"
-
-#~ msgid "Change item"
-#~ msgstr "Промяна на обекта"
-
-#~ msgid "Menu:"
-#~ msgstr "Меню:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce панел"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Добавяне на нов обект"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Настройки"
-
-#~ msgid "Select icon"
-#~ msgstr "Избор на икона"
-
-#~ msgid "Icon:"
-#~ msgstr "Икона:"
-
-#~ msgid "Icon Preview"
-#~ msgstr "Преглед на икона"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Вашият мениджър на прозорци изглежда не подържа загатваниядефинирани на "
-#~ "http://www.freedesktop.org.·\n"
-#~ "Някои възможности на Xfce няма да работят както се очаква."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_Мениджър за настройки"
-
-#~ msgid "Tiny"
-#~ msgstr "Тънък"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Тема за икони:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "Слой на панела:"
-
-#~ msgid "Normal"
-#~ msgstr "Нормално"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Центриране на панела"
-
-#~ msgid "Set"
-#~ msgstr "Настрой"
-
-#~ msgid "Position"
-#~ msgstr "Позиция"
-
-#~ msgid "Sunday"
-#~ msgstr "Неделя"
-
-#~ msgid "Monday"
-#~ msgstr "Понеделник"
-
-#~ msgid "Tuesday"
-#~ msgstr "Вторник"
-
-#~ msgid "Wednesday"
-#~ msgstr "Сряда"
-
-#~ msgid "Thursday"
-#~ msgstr "Четвъртък"
-
-#~ msgid "Friday"
-#~ msgstr "Петък"
-
-#~ msgid "Saturday"
-#~ msgstr "Събота"
-
-#~ msgid "January"
-#~ msgstr "Януари"
-
-#~ msgid "February"
-#~ msgstr "Февруари"
-
-#~ msgid "March"
-#~ msgstr "Март"
-
-#~ msgid "April"
-#~ msgstr "Април"
-
-#~ msgid "May"
-#~ msgstr "Май"
-
-#~ msgid "June"
-#~ msgstr "Юни"
-
-#~ msgid "July"
-#~ msgstr "Юли"
-
-#~ msgid "August"
-#~ msgstr "Август"
-
-#~ msgid "September"
-#~ msgstr "Септември"
-
-#~ msgid "October"
-#~ msgstr "Октомври"
-
-#~ msgid "November"
-#~ msgstr "Ноември"
-
-#~ msgid "December"
-#~ msgstr "Декември"
