--- a/po/nl.po
+++ b/po/nl.po
@@ -1,17 +1,16 @@
-# Xfce 4 Panel.
-# Copyright (C) 2003 Jasper Huijsmans 
-# This file is distributed under the same license as the xfce4 package.
-# Jasper Huijsmans <jasper@xfce.org>, 2003.
+# Dutch translations for xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
+# Jasper Huijsmans <jasper@xfce.org>, 2003-2004.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4 VERSION\n"
+"Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2004-08-22 16:00+0200\n"
+"PO-Revision-Date: 2005-08-20 01:29+0900\n"
 "Last-Translator: Jasper Huijsmans <jasper@xfce.org>\n"
-"Language-Team: Nederlands <nl@li.org>\n"
+"Language-Team: Dutch <xfce4-dev@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -454,9 +453,3 @@ msgstr "Interval (sec):"
 #: plugins/mailcheck/mailcheck.c:1016
 msgid "Mail checker"
 msgstr "Mail checker"
-
-#~ msgid "Remove"
-#~ msgstr "Verwijderen"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Twee knoppen tonen:"
