--- a/po/af.po
+++ b/po/af.po
@@ -1,17 +1,19 @@
-# translation of xfce4-panel.po to Afrikaans
+# Afrikaans translations for xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
 # Petri Jooste <petri.jooste@gmail.com>, 2005.
+#
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2005-08-01 01:59-0500\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: Petri Jooste <petri.jooste@gmail.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
 "POT-Creation-Date: 2005-01-09 13:35+0100\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"PO-Revision-Date: 2005-08-20 01:22+0900\n"
+"Last-Translator: Petri Jooste <petri.jooste@gmail.com>\n"
+"Language-Team: Afrikaans <i18n@af.org.za>\n"
 "MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: panel/xfce_support.c:557
 msgid "Select file"
