--- a/po/es_MX.po
+++ b/po/es_MX.po
@@ -1,17 +1,16 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <edscott@imp.mx>, 2003.
+# Spanish translations for xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panelpackage.
+# Edscott Wilson García <edscott@xfce.org>, 2004.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2004-01-13 00:00+0100\n"
+"PO-Revision-Date: 2005-08-20 01:26+0900\n"
 "Last-Translator: Edscott Wilson García <edscott@xfce.org>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
