--- a/po/pl.po
+++ b/po/pl.po
@@ -1,12 +1,18 @@
-#, fuzzy
+# Polish translations for xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
+# Paweł Pastuła <pastulap@poczta.onet.pl>, 2003.
+# Daniel Mróz <beorn@alpha.pl>, 2003.
+# Wit Wiliński <madman@berlios.de>, 2005.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2005-04-08 00:00+0000\n"
+"PO-Revision-Date: 2005-08-20 01:30+0900\n"
 "Last-Translator: Wit Wilinski <madman@linux.bydgo.org>\n"
-"Language-Team: Polish <PL@li.org>\n"
+"Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
