--- a/po/sv.po
+++ b/po/sv.po
@@ -1,17 +1,16 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Swedish translations for xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
+# Joakim Andreasson <joakim.andreasson@gmx.net>, 2003-2004.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2005-08-20 01:33+0900\n"
+"Last-Translator: Joakim Andreasson <joakim.andreasson@gmx.net>\n"
+"Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -464,108 +463,3 @@ msgstr "Intervall (sek):"
 #, fuzzy
 msgid "Mail checker"
 msgstr "Epostkontroll"
-
-#~ msgid "Remove"
-#~ msgstr "Ta bort"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Visa två knappar"
-
-#~ msgid "Change item"
-#~ msgstr "Ändra objekt"
-
-#~ msgid "Menu:"
-#~ msgstr "Meny:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce-panelen"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/_Nytt objekt"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Egenskaper..."
-
-#~ msgid "Select icon"
-#~ msgstr "Välj ikon"
-
-#~ msgid "Icon:"
-#~ msgstr "Ikon:"
-
-#~ msgid "Icon Preview"
-#~ msgstr "Förhandsvisning av ikon"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "din fönsterhanterare verkar inte stödja de nya fönsterhanterarledtrådarna "
-#~ "såsomdefinierade på http://www.freedesktop.org. \n"
-#~ "Detta kan begränsa Xfce:s avsedda funktionalitet."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_Inställningshanterare"
-
-#~ msgid "Tiny"
-#~ msgstr "Minimal"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Ikontema:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "Panellager:"
-
-#~ msgid "Normal"
-#~ msgstr "Normalt"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Centrera panelen:"
-
-#~ msgid "Set"
-#~ msgstr "Sätt"
-
-#~ msgid "Sunday"
-#~ msgstr "Söndag"
-
-#~ msgid "Monday"
-#~ msgstr "Måndag"
-
-#~ msgid "Tuesday"
-#~ msgstr "Tisdag"
-
-#~ msgid "Wednesday"
-#~ msgstr "Onsdag"
-
-#~ msgid "Thursday"
-#~ msgstr "Torsdag"
-
-#~ msgid "Friday"
-#~ msgstr "Fredag"
-
-#~ msgid "Saturday"
-#~ msgstr "Lördag"
-
-#~ msgid "January"
-#~ msgstr "Januari"
-
-#~ msgid "February"
-#~ msgstr "Februari"
-
-#~ msgid "March"
-#~ msgstr "Mars"
-
-#~ msgid "May"
-#~ msgstr "Maj"
-
-#~ msgid "June"
-#~ msgstr "Juni"
-
-#~ msgid "July"
-#~ msgstr "Juli"
-
-#~ msgid "August"
-#~ msgstr "Augusti"
-
-#~ msgid "October"
-#~ msgstr "Oktober"
