Added missing '\n', which causes parsing error at     http://xfce.org/~kelnos/xfce4/i18n/
Added fall back address at the 'Language-Team: ', according to the
    http://www.iro.umontreal.ca/translation/registry.cgi?team=index

Modified initial comment strings with template by 'msginit'.

Discarded obsolete translations.


(Old svn revision: 17044)

--- a/po/it.po
+++ b/po/it.po
@@ -1,14 +1,14 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Italian translations for xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
 # Alex Dupre <ale@FreeBSD.org>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Xfce4\n"
+"Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2004-03-11 13:45+0100\n"
+"PO-Revision-Date: 2005-08-21 15:20+0900\n"
 "Last-Translator: Luca Marrocco <buildup@libero.it>\n"
 "Language-Team: GUFI <traduzioni@gufi.org>\n"
 "MIME-Version: 1.0\n"
@@ -107,7 +107,7 @@ msgid "Are you sure you want to exit?"
 msgstr "Sei sicuro di voler uscire?"
 
 #: panel/main.c:401
-#, fuzzy, c-format
+#, c-format, fuzzy
 msgid ""
 "\n"
 " The Xfce Panel\n"
@@ -119,9 +119,15 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, versione %s\n"
+"\n"
+"The Xfce Panel\n"
+"versione %s\n"
+"\n"
 "Parte di Xfce Desktop Environment\n"
 "http://www.xfce.org\n"
+"\n"
+"Licensed under the GNU GPL.\n"
+"\n"
 
 #: panel/main.c:488
 #, c-format
@@ -463,123 +469,3 @@ msgstr "Intervallo (sec):"
 #, fuzzy
 msgid "Mail checker"
 msgstr "Controllo posta"
-
-#~ msgid "Remove"
-#~ msgstr "Rimuovi"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Mostra due bottoni:"
-
-#~ msgid "Change item"
-#~ msgstr "Cambia oggetto"
-
-#~ msgid "Menu:"
-#~ msgstr "Menu:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce Panel"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Aggiungi un _nuovo oggetto"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Proprietà ..."
-
-#~ msgid "Select icon"
-#~ msgstr "Seleziona un'icona"
-
-#~ msgid "Icon:"
-#~ msgstr "Icona:"
-
-#~ msgid "Icon Preview"
-#~ msgstr "Anteprima Icona"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Il tuo gestore di finestre non sembra supportare alcune delle specifiche "
-#~ "definite da http://www.freedesktop.org. \n"
-#~ "Alcune caratteristiche di Xfce potrebbero non funzionare correttamente."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/Gestione impo_stazioni"
-
-#~ msgid "Tiny"
-#~ msgstr "Minuscole"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Tema delle icone:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "Livello del panello:"
-
-#~ msgid "Normal"
-#~ msgstr "Normale"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Centra il pannello:"
-
-#~ msgid "Set"
-#~ msgstr "Imposta"
-
-#~ msgid "Position"
-#~ msgstr "Posizione"
-
-#~ msgid "Sunday"
-#~ msgstr "Domenica"
-
-#~ msgid "Monday"
-#~ msgstr "Lunedì"
-
-#~ msgid "Tuesday"
-#~ msgstr "Martedì"
-
-#~ msgid "Wednesday"
-#~ msgstr "Mercoledì"
-
-#~ msgid "Thursday"
-#~ msgstr "Giovedì"
-
-#~ msgid "Friday"
-#~ msgstr "Venerdì"
-
-#~ msgid "Saturday"
-#~ msgstr "Sabato"
-
-#~ msgid "January"
-#~ msgstr "Gennaio"
-
-#~ msgid "February"
-#~ msgstr "Febbraio"
-
-#~ msgid "March"
-#~ msgstr "Marzo"
-
-#~ msgid "April"
-#~ msgstr "Aprile"
-
-#~ msgid "May"
-#~ msgstr "Maggio"
-
-#~ msgid "June"
-#~ msgstr "Giugno"
-
-#~ msgid "July"
-#~ msgstr "Luglio"
-
-#~ msgid "August"
-#~ msgstr "Agosto"
-
-#~ msgid "September"
-#~ msgstr "Settembre"
-
-#~ msgid "October"
-#~ msgstr "Ottobre"
-
-#~ msgid "November"
-#~ msgstr "Novembre"
-
-#~ msgid "December"
-#~ msgstr "Dicembre"
