--- a/po/ms.po
+++ b/po/ms.po
@@ -1,14 +1,14 @@
 # Xfce4-panel Malay translation.
-# Copyright (C) 2003 Olivier Fourdan
-# This file is distributed under the same license as the xfce4 package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
 # Harun Musa <mharun@gmx.net>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.0.3\n"
+"Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2004-02-07 10:31+0800\n"
+"PO-Revision-Date: 2005-08-21 15:21+0900\n"
 "Last-Translator: Harun Musa <mharun@gmx.net>\n"
 "Language-Team: Malay <translation-team-ms@list.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -103,7 +103,7 @@ msgid "Are you sure you want to exit?"
 msgstr "Adakah anda pasti untuk keluar?"
 
 #: panel/main.c:401
-#, fuzzy, c-format
+#, c-format, fuzzy
 msgid ""
 "\n"
 " The Xfce Panel\n"
@@ -115,9 +115,12 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, versi %s\n"
+"\n"
+"versi %s\n"
+"\n"
 "Sebahagian Persekitaran Meja Xfce\n"
 "http://www.xfce.org\n"
+"\n"
 
 #: panel/main.c:488
 #, c-format
@@ -460,76 +463,3 @@ msgstr "Interval (saat):"
 #, fuzzy
 msgid "Mail checker"
 msgstr "Periksa mel"
-
-#~ msgid "Remove"
-#~ msgstr "Buang"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Lihat dua bebutang:"
-
-#~ msgid "Change item"
-#~ msgstr "Tukar item"
-
-#~ msgid "Menu:"
-#~ msgstr "Menu:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Panel Xfce"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Tambah _item baru"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Perbendaharaan..."
-
-#~ msgid ""
-#~ "Removing an item will also remove its popup menu.\n"
-#~ "\n"
-#~ "Do you want to remove the item?"
-#~ msgstr ""
-#~ "Membuang item juga akan menyahkan menu popupnya.\n"
-#~ "\n"
-#~ "Adakah anda mahu buang item?"
-
-#~ msgid "Select icon"
-#~ msgstr "Pilih ikon"
-
-#~ msgid "Icon:"
-#~ msgstr "Ikon:"
-
-#~ msgid "Icon Preview"
-#~ msgstr "Pralihat Ikon"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Pengurus tetingkap anda nampaknya tidak menyokong petua pengurus "
-#~ "tetingkap baru sebagai yang didefinasikan di http://www.freedesktop."
-#~ "org. \n"
-#~ "Sebahagian ciri-ciri Xfce tidak bekerja seperti yang dikehendaki."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/Pengurus _Tetapan"
-
-#~ msgid "Tiny"
-#~ msgstr "Cinonet"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Tema ikon:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "Lapisan panel:"
-
-#~ msgid "Normal"
-#~ msgstr "Normal"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Ketengahkan panel:"
-
-#~ msgid "Set"
-#~ msgstr "Set"
-
-#~ msgid "Position"
-#~ msgstr "Posisi"
