--- a/po/ta.po
+++ b/po/ta.po
@@ -1,15 +1,14 @@
 # Tamil translation of Tamil XFCE Panel.
-# Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
 # Dinesh Nadarajah <n_dinesh@yahoo.com>, 2003.
-# 
-# 
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: Tamil XFCE Panel 4\n"
+"Project-Id-Version: Tamil XFCE Panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2003-09-24 17:41-0500\n"
+"PO-Revision-Date: 2005-08-21 15:25+0900\n"
 "Last-Translator: Dinesh Nadarajah <n_dinesh@yahoo.com>\n"
 "Language-Team: Tamil <tamilinix@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -108,7 +107,7 @@ msgid "Are you sure you want to exit?"
 msgstr "வெளிசெல்ல உங்களுக்கு விருப்பமா?"
 
 #: panel/main.c:401
-#, fuzzy, c-format
+#, c-format, fuzzy
 msgid ""
 "\n"
 " The Xfce Panel\n"
@@ -120,9 +119,15 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, பதிப்பு %s\n"
+"\n"
+"The Xfce Panel\n"
+"பதிப்பு %s\n"
+"\n"
 "Xfce கணிமேசை சூழலை சேர்ந்தது\n"
 "http://www.xfce.org\n"
+"\n"
+"Licensed under the GNU GPL.\n"
+"\n"
 
 #: panel/main.c:488
 #, c-format
@@ -465,129 +470,3 @@ msgstr "இடைவெளி (நொடி):"
 #, fuzzy
 msgid "Mail checker"
 msgstr "அஞ்சல் சரிபார்ப்பு"
-
-#~ msgid "Remove"
-#~ msgstr "கழட்டுக"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "þரண்டு பொத்தான்களை காட்டுக:"
-
-#~ msgid "Change item"
-#~ msgstr "உருப்படி மாற்று"
-
-#~ msgid "Menu:"
-#~ msgstr "பட்டி"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/XFCE பலகை"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/புதிய _உருப்படி சேர்க்கவும்"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_பண்புகள்..."
-
-#~ msgid "Select icon"
-#~ msgstr "குறுப்படம் தெரிவு செய்"
-
-#~ msgid "Icon:"
-#~ msgstr "குறும்படம்:"
-
-#~ msgid "Icon Preview"
-#~ msgstr "குறும்படம் முன்காட்சி"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "உங்கள் சாளரமேலாளர் http://www.freedesktop.org அறுதியிட்ட சாளர-குறிப்பிடுகளுக்கு "
-#~ "ஆதரவளிப்பு கிடையாது. \n"
-#~ "சில Xfce செயல்பாடுகள் விரும்பியதுபோல் வேலைசெய்யாது."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_அமைப்புகள் மேலாளர்"
-
-#~ msgid "Tiny"
-#~ msgstr "மிகசிறிய"
-
-#~ msgid "Icon theme:"
-#~ msgstr "குறும்படம் தோற்றம்:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "பலகை அடுக்கம்:"
-
-#~ msgid "Normal"
-#~ msgstr "இயல்பானது"
-
-#~ msgid "Center the panel:"
-#~ msgstr "பலகையை நடுப்படுத்து:"
-
-#~ msgid "Set"
-#~ msgstr "அமை"
-
-#~ msgid "Position"
-#~ msgstr "இடம்"
-
-#~ msgid "Sunday"
-#~ msgstr "ஞாயிறு"
-
-#~ msgid "Monday"
-#~ msgstr "திங்கள்"
-
-#~ msgid "Tuesday"
-#~ msgstr "வெவ்வாய்"
-
-#~ msgid "Wednesday"
-#~ msgstr "புதன்"
-
-#~ msgid "Thursday"
-#~ msgstr "வியாழன்"
-
-#~ msgid "Friday"
-#~ msgstr "வெள்ளி"
-
-#~ msgid "Saturday"
-#~ msgstr "சனி"
-
-#~ msgid "January"
-#~ msgstr "ஜனவரி"
-
-#~ msgid "February"
-#~ msgstr "பிப்ரவரி"
-
-#~ msgid "March"
-#~ msgstr "மார்ச்"
-
-#~ msgid "April"
-#~ msgstr "ஏப்ரல்"
-
-#~ msgid "May"
-#~ msgstr "மே"
-
-#~ msgid "June"
-#~ msgstr "ஜுன்"
-
-#~ msgid "July"
-#~ msgstr "ஜூலை"
-
-#~ msgid "August"
-#~ msgstr "ஆகஸ்ட்"
-
-#~ msgid "September"
-#~ msgstr "செப்டம்பர்"
-
-#~ msgid "October"
-#~ msgstr "அக்டோபர்"
-
-#~ msgid "November"
-#~ msgstr "நவம்பர்"
-
-#~ msgid "December"
-#~ msgstr "டிசம்பர்"
-
-#~ msgid "_Done"
-#~ msgstr "_மூடு"
-
-#~ msgid "Type:"
-#~ msgstr "வகை:"
