--- a/po/ar.po
+++ b/po/ar.po
@@ -1,15 +1,16 @@
-# Arabic translation for xfce4-panel
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Arabic translation for xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
 # saleh alhathal <hathalsal@hotmail.com>, 2004.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: ar\n"
+"Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2004-2-8 8:25+0300\n"
+"PO-Revision-Date: 2005-08-21 15:12+0900\n"
 "Last-Translator: saleh alhathal <hathalsal@hotmail.com>\n"
-"Language-Team: arabic\n"
+"Language-Team: Arabic <lumina@silverpen.de>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -102,7 +103,7 @@ msgid "Are you sure you want to exit?"
 msgstr "هل أنت متاكد تريد الخروج؟"
 
 #: panel/main.c:401
-#, fuzzy, c-format
+#, c-format, fuzzy
 msgid ""
 "\n"
 " The Xfce Panel\n"
@@ -114,9 +115,12 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, نسخة %s\n"
+"\n"
+"نسخة %s\n"
+"\n"
 "جزء من الواجهة الرسومية Xfce\n"
 "http://www.xfce.org\n"
+"\n"
 
 #: panel/main.c:488
 #, c-format
@@ -459,75 +463,3 @@ msgstr "فترة بثانية :"
 #, fuzzy
 msgid "Mail checker"
 msgstr "مراقبة البريد"
-
-#~ msgid "Remove"
-#~ msgstr "حذف"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "إضهار زرين"
-
-#~ msgid "Change item"
-#~ msgstr "غير المادة"
-
-#~ msgid "Menu:"
-#~ msgstr "قائمة :"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/شريط Xfce"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/أضف _جديد"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_خصائص..."
-
-#~ msgid ""
-#~ "Removing an item will also remove its popup menu.\n"
-#~ "\n"
-#~ "Do you want to remove the item?"
-#~ msgstr ""
-#~ "حذف هذة المادة سيؤدي لحذف قائمتة المنسدلة أيضا\n"
-#~ "\n"
-#~ "هل تريد حذف هذة المادة؟"
-
-#~ msgid "Select icon"
-#~ msgstr "إختر أيقونة"
-
-#~ msgid "Icon:"
-#~ msgstr "أيقونة:"
-
-#~ msgid "Icon Preview"
-#~ msgstr "عرض أيقونات"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "يبدوان واجهتك الرسومية ﻻ تدعم التلميحات كماتم تعريفها في http://www."
-#~ "freedesktop.org. \n"
-#~ "بعض خصائص Xfce قد ﻻ تعمل كما يجب"
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_مدير اﻹعدادات"
-
-#~ msgid "Tiny"
-#~ msgstr "صغير جدا"
-
-#~ msgid "Icon theme:"
-#~ msgstr "سمة اﻷيقونات :"
-
-#~ msgid "Panel layer:"
-#~ msgstr "مظهر الشريط :"
-
-#~ msgid "Normal"
-#~ msgstr "عادية"
-
-#~ msgid "Center the panel:"
-#~ msgstr "وسط الشريط :"
-
-#~ msgid "Set"
-#~ msgstr "تثبيت"
-
-#~ msgid "Position"
-#~ msgstr "موقع"
