--- a/po/bg.po
+++ b/po/bg.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2005-08-20 01:23+0900\n"
+"PO-Revision-Date: 2005-08-21 15:13+0900\n"
 "Last-Translator: Miroslav Yordanov <miordanov@i-space.org>\n"
 "Language-Team: Bulgarian <bg@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -107,7 +107,7 @@ msgid "Are you sure you want to exit?"
 msgstr "Сигурни ли сте че искате да излезнете?"
 
 #: panel/main.c:401
-#, fuzzy, c-format
+#, c-format, fuzzy
 msgid ""
 "\n"
 " The Xfce Panel\n"
@@ -119,9 +119,12 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s,·версия·%s\n"
+"\n"
+"·версия·%s\n"
+"\n"
 "Част от·Xfce·Desktop·Environment\n"
 "http://www.xfce.org\n"
+"\n"
 
 #: panel/main.c:488
 #, c-format
