--- a/po/hi.po
+++ b/po/hi.po
@@ -1,19 +1,19 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Hindi translations for xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
 # G Karunakar <karunakar@freedomink.org>, 2003.
 #
 msgid ""
 msgstr ""
+"Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-05-10 22:10+0200\n"
-"PO-Revision-Date: 2003-05-21 12:50+0530\n"
+"PO-Revision-Date: 2005-08-21 15:17+0900\n"
 "Last-Translator: G Karunakar <karunakar@freedomink.org>\n"
 "Language-Team: Hindi <indlinux-hindi-gnome@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Project-Id-Version  Xfce 4\n"
 
 # libgnomeui/gnome-file-entry.c:418
 #: panel/xfce_support.c:557
@@ -116,9 +116,12 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s सेसकरण %s\n"
+"\n"
+"सेसकरण %s\n"
+"\n"
 "Xfce डेसकटॉप वातावरण का भाग\n"
 "http://www.xfce.org\n"
+"\n"
 
 #: panel/main.c:488
 #, c-format
@@ -460,130 +463,3 @@ msgstr "अंतराल (क्षण):"
 #, fuzzy
 msgid "Mail checker"
 msgstr "डाक देखो"
-
-#~ msgid "Remove"
-#~ msgstr "हटाएं"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "दो बट्टन दिखाएं"
-
-#~ msgid "Change item"
-#~ msgstr "बदलें"
-
-#~ msgid "Menu:"
-#~ msgstr "मेनु:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce पेनेल"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/नया वस्तु जोडें (_n)"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/विशेषताएं (_P) ..."
-
-#~ msgid "Select icon"
-#~ msgstr "आईकाॅन चुनें"
-
-# libgnome-desktop/gnome-ditem-edit.c:371
-#~ msgid "Icon:"
-#~ msgstr "आईकाॅन :"
-
-#~ msgid "Icon Preview"
-#~ msgstr "आईकाॅन"
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/समायोजन प्रभंधक (_S)"
-
-#~ msgid "Tiny"
-#~ msgstr "सूक्षम"
-
-#~ msgid "Icon theme:"
-#~ msgstr "आईकन थीम"
-
-#~ msgid "Panel layer:"
-#~ msgstr "पेनल परत"
-
-#~ msgid "Normal"
-#~ msgstr "सामान्य"
-
-#~ msgid "Center the panel:"
-#~ msgstr "पेनेल को केंद्र मे करें"
-
-#~ msgid "Set"
-#~ msgstr "सेट"
-
-#~ msgid "Position"
-#~ msgstr "स्थिति"
-
-#~ msgid "Sunday"
-#~ msgstr "रविवार"
-
-#~ msgid "Monday"
-#~ msgstr "सोमवार"
-
-#~ msgid "Tuesday"
-#~ msgstr "मंगलवार"
-
-#~ msgid "Wednesday"
-#~ msgstr "बुधवार"
-
-#~ msgid "Thursday"
-#~ msgstr "गुरुवार"
-
-#~ msgid "Friday"
-#~ msgstr "शुक्रवार"
-
-#~ msgid "Saturday"
-#~ msgstr "शनिवार"
-
-#~ msgid "January"
-#~ msgstr "जनवरी"
-
-#~ msgid "February"
-#~ msgstr "फरवरी"
-
-#~ msgid "March"
-#~ msgstr "मार्च"
-
-#~ msgid "April"
-#~ msgstr "अप्रैल"
-
-#~ msgid "May"
-#~ msgstr "मई"
-
-#~ msgid "June"
-#~ msgstr "जून"
-
-#~ msgid "July"
-#~ msgstr "जुलाई"
-
-#~ msgid "August"
-#~ msgstr "अगस्त"
-
-#~ msgid "September"
-#~ msgstr "सितम्बर"
-
-#~ msgid "October"
-#~ msgstr "अक्टूबर"
-
-#~ msgid "November"
-#~ msgstr "नवम्बर"
-
-#~ msgid "December"
-#~ msgstr "दिसम्बर"
-
-#~ msgid "_Done"
-#~ msgstr "हो गया (_D)"
-
-#~ msgid "Type:"
-#~ msgstr "प्रकार:"
-
-#~ msgid "Add item"
-#~ msgstr "वस्तु जोडें"
-
-#~ msgid "Select Item Type"
-#~ msgstr "वस्तु प्रकार चुनें"
-
-#~ msgid "Select an item type from the list"
-#~ msgstr "सूची में से वस्तु प्रकार चुनें"
