--- a/po/uk.po
+++ b/po/uk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-20 01:35+0900\n"
-"PO-Revision-Date: 2005-08-20 01:37+0900\n"
+"PO-Revision-Date: 2005-08-21 15:26+0900\n"
 "Last-Translator: Maxim Dziumanenko <mvd@mylinux.com.ua>\n"
 "Language-Team: Ukrainian <translation-team-uk@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -118,9 +118,15 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, версія %s\n"
+"\n"
+"The Xfce Panel\n"
+"версія %s\n"
+"\n"
 "Частина робочого середовища Xfce\n"
 "http://www.xfce.org\n"
+"\n"
+"Licensed under the GNU GPL.\n"
+"\n"
 
 #: ../panel/main.c:488
 #, c-format
